--- a/1-js/02-first-steps/10-ifelse/2-check-standard/ifelse_task2/index.html
+++ b/1-js/02-first-steps/10-ifelse/2-check-standard/ifelse_task2/index.html
@@ -3,14 +3,14 @@
 
 <body>
   <script>
-    'use strict';
+    'uso estrito';
 
-    let value = prompt('What is the "official" name of JavaScript?', '');
+    let value = prompt('Qual é o nome "oficial" do JavaScript?', '');
 
     if (value == 'ECMAScript') {
-      alert('Right!');
+      alert('Correto!');
     } else {
-      alert("You don't know? ECMAScript!");
+      alert("Você não sabe? ECMAScript!");
     }
   </script>
 
